Fixing some resizing things on mobile

--- a/app/styles/inputs.css
+++ b/app/styles/inputs.css
@@ -146,7 +146,6 @@ button {
     border: 1px solid var(--hvz-border);
     border-radius: 5px;
     margin: 5px 0px 0px 0px;
-    height: 24px;
     max-width: inherit;
 }
 
@@ -165,10 +164,6 @@ label.form-control {
 
 label.form-control:empty {
     display: block;
-}
-
-input.form-control {
-    max-height: 24px;
 }
 
 form>.form-control {
